tests/error/varloop_only.gw
#! [contains] Varloop must be the only expression
fun void test(...) {
  <<<"test">>>, vararg.start;
  vararg.end;
}
